--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -15,19 +15,20 @@
 
 .App-header {
   background-color: #282c34;
+  overflow: hidden;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+  display: flex; */
+  /* flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
-
+} */
+/* 
 .App-link {
   color: #61dafb;
-}
-
+} */
+/* 
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -35,21 +36,32 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
 
 
-nav {
-  display: flex;
-  justify-content: space-evenly;
-}
+ nav {
+   display: flex;
+  justify-content: left; 
+   overflow: hidden;
+  background-color: rgb(253, 246, 246);
+  transition: top .4s;
+} 
 
-nav a {
-  padding: 20px;
-  width: 33%;
+ nav a {
+  
+  color:rgb(105, 103, 103);
+  text-decoration: none ; 
+ 
+  float: left;
+  /* color: white; */
   text-align: center;
-  background: pink;
-  font-size:24px;
-  border: 1px solid black;
-  color: coral;
+  padding: 14px 16px;
   text-decoration: none;
+  font-size: 17px; 
 }
+
+
+ .nav:hover {
+  background-color: #ddd;
+  color: rgb(172, 168, 168);
+}  
