--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
+  background-color:rgb(247, 243, 243);
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -12,6 +13,43 @@ code {
     monospace;
 }
 .img{
-  height: 500px;
-  width: auto;
+  height: 400px;
+  width: 600px;
+  /* margin: 1px; */
+  /* padding: 1px; */
+  
 }
+
+
+div.gallery {
+  margin: 5px;
+  border: 1px solid #ccc;
+  float: left;
+  width: 180px;
+  
+
+}
+
+div.gallery :hover {
+  border: 1px solid #777;
+}
+
+
+div .gallery img{
+flex-wrap: wrap;
+height: auto;
+width: 100%;
+}
+h2 {
+  /* padding: 15px; */
+  text-align: center;
+}
+
+
+/* 
+h2 {
+color: white;
+text-align: justify;
+text-decoration: none;
+
+} */
